--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,32 +16,4 @@ spring:
     show-sql: true
   kafka:
     bootstrap-servers: localhost:9092
-
-message:
-  topic:
-    name: kong
-greeting:
-  topic:
-    name: greeting
-filtered:
-  topic:
-    name: filtered
-partitioned:
-  topic:
-    name: partitioned
-multi:
-  type:
-    topic:
-      name: multitype
-monitor:
-  kafka:
-    bootstrap:
-      config: localhost:9092
-    consumer:
-      groupid: kong
-  topic:
-    name: kong
-  producer:
-    simulate: true
-  consumer:
-    simulate: true
+    group-id: kong
